# chemstab

./: .gitignore  CMakeLists.txt  README.md  TODO  build.sh
chemstab-bin/src/main/chem/: main.cpp
chemstab-lib/: CMakeLists.txt
chemstab-lib/src/chem/: Chemical.hpp  Compound.cpp  Compound.hpp
chemstab-lib/src/chem/graphs/: AlgorithmResult.hpp  Edge.cpp  Edge.hpp  EdgeNodePair.cpp  EdgeNodePair.hpp  Graph.cpp  Graph.hpp  GraphAlgorithm.hpp  Node.cpp  Node.hpp  WeightedEdge.cpp  WeightedEdge.hpp
chemstab-lib/src/chem/params/: AtomicNumber.hpp  AtomicSymbol.hpp  AtomicWeight.hpp  BoilingPoint.hpp  Conversions.hpp  Density.hpp  ElectronCount.hpp  Electronegativity.hpp  HeatCapacity.hpp  MeltingPoint.hpp  Name.hpp  ProtonCount.hpp  Types.hpp
chemstab-lib/src/include/chem/: Chemical.hpp  Compound.cpp  Compound.hpp  a.out  main.cpp  return_reference_test.cpp  test_variadics.cpp
chemstab-lib/src/include/chem/graphs/: AlgorithmResult.hpp  Edge.cpp  EdgeNodePair.cpp  Graph.hpp  GraphAlgorithm.hpp  Node.hpp  WeightedEdge.hpp
chemstab-lib/src/include/chem/params/: AtomicSymbol.hpp  AtomicWeight.hpp  BoilingPoint.hpp  Conversions.hpp  Density.hpp  Electronegativity.hpp  HeatCapacity.hpp  MeltingPoint.hpp  Name.hpp  ProtonCount.hpp
chemstab-lib/src/tests/: CMakeLists.txt  Graph_gtest.cpp  chemicals_test.cpp  simple_test2.cpp
docs/: Doxyfile
